--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <main>
     <div class="container">
         <!--História-->
-        <section id="historia" class="subject">
+        <section class="subject">
             <div class="conteudo">
                 <div class="col-md-3">
                     <img class="fotos" src="../../assets/img/historia.png" alt="História">
@@ -21,16 +21,15 @@
         </section>
 
         <!--Parceiros-->
-        <section id="parceiros" class="subject">
+        <section class="subject">
             <div class="conteudo">
                 <h3>Parceiros</h3>
                 <img class="parceiros" src="../../assets/img/fatec_votorantim.png" alt="Fatec Votorantim">
-                <img class="parceiros" src="../../assets/img/votorantim.png" alt="Votorantim">
             </div>
         </section>
 
         <!--Sobre nós-->
-        <section id="sobre" class="subject">
+        <section class="subject">
             <div class="conteudo">
                 <div class="col-md-3">
                     <img class="fotos" src="../../assets/img/missao.png" alt="Missão">
@@ -62,7 +61,7 @@
         </section>
 
         <!--Como Funciona-->
-        <section id="comoF" class="subject">
+        <section class="subject">
             <h3>Como Funciona</h3>
             <div class="carousel-container">
               <div id="carouselRaiders" class="carousel slide" data-bs-ride="carousel">
