--- a/src/app/perguntas/perguntas.component.html
+++ b/src/app/perguntas/perguntas.component.html
@@ -1,6 +1,12 @@
 <main>
     <div class="container">
+    <div class="subject">
         <h1>Banco de dados Relacional</h1>
+        <form  role="search">
+            <input type="search"  placeholder="Pesquisar" aria-label="Search">
+
+        </form>
+    </div>
     </div>
     <div class="container">
         <a [routerLink]="['/resposta']">
